--- a/src/components/Monster/Monster.css
+++ b/src/components/Monster/Monster.css
@@ -7,6 +7,7 @@
   top: 20px;
   animation: 1.5s monster-idle infinite steps(4);
   opacity: 1;
+  transform: translateZ(0);
 }
 
 .monster.hit {
@@ -318,6 +319,6 @@
 
 @media (max-width: 700px) {
   .monster {
-    bottom: 40px;
+    top: 5px;
   }
 }
