--- a/src/components/Player/Player.css
+++ b/src/components/Player/Player.css
@@ -1,9 +1,8 @@
 .player {
-  transform: scaleX(-1);
-  -webkit-transform: scaleX(-1);
-  -moz-transform: scaleX(-1);
-  -o-transform: scaleX(-1);
-
+  transform: scaleX(-1) translate3d(0, 0, 0);
+  -webkit-transform: scaleX(-1) translate3d(0, 0, 0);
+  -moz-transform: scaleX(-1) translate3d(0, 0, 0);
+  -o-transform: scaleX(-1) translate3d(0, 0, 0);
   position: absolute;
   height: 144px;
   width: 144px;
@@ -11,6 +10,7 @@
   left: 10px;
   image-rendering: pixelated;
   background-position: 0;
+  backface-visibility: hidden;
 }
 
 .player.idle {
@@ -212,5 +212,11 @@
   }
   100% {
     background-position: -432px;
+  }
+}
+
+@media (max-width: 700px) {
+  .player {
+    top: 45px;
   }
 }
