--- a/src/components/GameUserModal/GameUserModal.css
+++ b/src/components/GameUserModal/GameUserModal.css
@@ -26,6 +26,8 @@
   background: #f2f2f2;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
   border: 1px solid #333;
+  text-align: center;
+  width: 80px;
 }
 
 .game-user-modal button:focus {
