--- a/src/components/StudentDash/StudentDash.css
+++ b/src/components/StudentDash/StudentDash.css
@@ -220,7 +220,7 @@
   text-align: start;
   margin-bottom: 0;
   margin-top: 3.2rem;
-  margin-left: 2rem;
+  margin-left: 1rem;
 }
 
 .student-dash-wrapper button:hover {
@@ -231,7 +231,7 @@
   grid-column: 2;
   text-align: start;
   margin-top: 0.5rem;
-  margin-left: 2rem;
+  margin-left: 1rem;
 }
 
 .student-class-link:hover {
@@ -726,6 +726,16 @@
 }
 
 @media (max-width: 860px) {
+  .onboarding-link {
+    position: absolute;
+    top: 1.5rem;
+    right: 1.5rem;
+    margin: 0;
+    padding: 0;
+    width: 18px;
+    height: 27px;
+    background-size: cover;
+  }
   .student-dash-wrapper {
     width: 350px;
     height: 570px;
@@ -738,15 +748,21 @@
     height: 120px;
   }
 
+  .student-name {
+    margin-top: 2rem;
+  }
+
   .new-game-section {
     margin-top: 0;
     display: block;
   }
 
   .start-game {
-    margin: auto;
+    margin: 3rem auto 0;
     padding: 0 0.5rem;
-    height: 50px;
+    height: 40px;
+    width: 200px;
+    border: none;
   }
 
   .instrument-label {
@@ -760,11 +776,15 @@
 
   .instrument-dropdown-list {
     left: 74px;
-    top: 92px;
+    top: 42px;
+  }
+
+  .instrument-dropdown-list.true {
+    height: 370px;
   }
 
   .total-games-played {
-    margin: 1rem 0 2rem;
+    margin: 1rem 0 1rem;
     text-align: center;
   }
 
@@ -774,7 +794,7 @@
   }
 
   .times-row {
-    margin: 1rem auto 2rem;
+    margin: 1rem auto 1rem;
     width: 290px;
     justify-content: space-between;
   }
@@ -796,6 +816,14 @@
 
   .mq-badge-row {
     display: flex;
+  }
+
+  .student-class-dash-info button {
+    width: 180px;
+    height: 25px;
+    text-align: center;
+    top: 50px;
+    left: 1rem;
   }
 
   .most-recent-badges {
