--- a/src/components/StudentDash/StudentDash.css
+++ b/src/components/StudentDash/StudentDash.css
@@ -746,6 +746,7 @@
 
   .student-dash-header {
     height: 120px;
+    grid-template-columns: 112px 238px;
   }
 
   .student-name {
@@ -753,8 +754,9 @@
   }
 
   .new-game-section {
-    margin-top: 0;
+    margin-top: 1rem;
     display: block;
+    height: 128px;
   }
 
   .start-game {
@@ -829,5 +831,12 @@
   .most-recent-badges {
     text-align: center;
     margin: 1rem;
+  }
+
+  .no-instrument-warning {
+    top: 10px;
+  }
+  .no-instrument-warning.true {
+    left: 24px;
   }
 }
