Update MQs for ForgotPassword component

--- a/src/components/ForgotPassword/ForgotPassword.css
+++ b/src/components/ForgotPassword/ForgotPassword.css
@@ -47,6 +47,10 @@
   margin: 2.4rem 0 0 2rem;
 }
 
+.send-new-pw-btn {
+  border-radius: 0;
+}
+
 .send-new-pw-btn,
 .backup-from-forgot-pw,
 .have-reset-token {
@@ -59,7 +63,7 @@
 
 .send-new-pw-btn,
 .backup-from-forgot-pw {
-  box-shadow: 2px 2px 2px rgba(0, 0, 0 0.5);
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 .send-new-pw-btn:active,
@@ -126,4 +130,39 @@
 .fail-message-reset.true,
 .no-pw-match-reset.true {
   left: 0;
+}
+
+@media (max-width: 700px) {
+  .backup-from-forgot-pw {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    bottom: 2rem;
+    width: 4rem;
+    padding: 4px 0 3px;
+    text-align: center;
+  }
+
+  .forgot-pw-lock-icon {
+    display: none;
+  }
+
+  .forgot-password-form .forgot-email-input {
+    padding-left: 4px;
+    padding-top: 5px;
+  }
+
+  .forgot-password-form {
+    margin: 0.5rem;
+  }
+  input.send-new-pw-btn {
+    height: 25px;
+    /* background: #f2f2f2; */
+  }
+}
+
+.character {
+  image-rendering: pixelated;
 }
