--- a/src/components/AnimatedBackground/AnimatedBackground.css
+++ b/src/components/AnimatedBackground/AnimatedBackground.css
@@ -3,37 +3,69 @@
   animation: background-move 80s linear infinite;
   width: 2100px;
   height: 1600px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  image-rendering: pixelated;
 }
 
 .landing-char1 {
   position: absolute;
-  height: 124px;
-  width: 60px;
-  background: black;
-  top: 354px;
-  animation: landing-char1 1s linear infinite,
+  height: 144px;
+  width: 78px;
+  top: 350px;
+  animation: landing-char1-frames 1s steps(4) infinite,
     landing-char1-move 60s linear infinite;
   z-index: 11;
+  background-size: 416px 144px;
+  image-rendering: pixelated;
+}
+
+.snow-backer {
+  animation: snow 80s infinite linear;
+  -webkit-animation: snow 80s infinite linear;
+  -moz-animation: snow 80s infinite linear;
+  -o-animation: snow 80s infinite linear;
+
+  position: absolute;
+  height: 6000px;
+  width: 10000px;
+  background: url(../Landing/images/snow/wsheet_snow_1.png);
+  background-size: 384px 96px;
+  z-index: 10000;
+}
+
+@keyframes landing-char1-frames {
+  100% {
+    background-position: -416px;
+  }
 }
 
 .landing-char2 {
   position: absolute;
-  height: 124px;
-  width: 63px;
-  background: black;
+  height: 144px;
+  width: 78px;
   top: 320px;
-  animation: landing-char2 1s linear infinite,
+  animation: landing-char2-frames 1s steps(4) infinite,
     landing-char2-move 60s linear infinite;
   z-index: 10;
+  background-size: 416px 144px;
+  image-rendering: pixelated;
+}
+
+@keyframes landing-char2-frames {
+  100% {
+    background-position: -416px;
+  }
 }
 
 .landing-birb {
   position: absolute;
-  width: 122px;
-  height: 64px;
-  animation: birb-flap 1s linear infinite, birb-move 20s linear infinite;
+  width: 164px;
+  height: 144px;
+  animation: birb-flap 1s steps(4) infinite, birb-move 20s linear infinite;
   z-index: 100;
   left: 700px;
+  background-size: 656px, 144px;
 }
 
 .standing-char1 {
@@ -46,7 +78,7 @@
   image-rendering: pixelated;
   background: url(./images/landing-standing-chars/stand.png);
   background-size: cover;
-  animation: laughing-landing-char linear infinite 12s;
+  /* animation: laughing-landing-char linear infinite 12s; */
 }
 
 .standing-char2 {
@@ -58,6 +90,7 @@
   left: 500px;
   background: url(./images/landing-standing-chars/char2.png);
   background-size: cover;
+  image-rendering: pixelated;
 }
 
 .crystal1,
@@ -139,46 +172,6 @@
 }
 
 @keyframes landing-char1 {
-  0% {
-    background: url(./images/landing-char1/left1.png);
-    image-rendering: pixelated;
-    background-size: cover;
-  }
-  25% {
-    background: url(./images/landing-char1/left1.png);
-    image-rendering: pixelated;
-    background-size: cover;
-  }
-  25.01% {
-    background: url(./images/landing-char1/left2.png);
-    image-rendering: pixelated;
-    background-size: cover;
-  }
-  50% {
-    background: url(./images/landing-char1/left2.png);
-    image-rendering: pixelated;
-    background-size: cover;
-  }
-  50.01% {
-    background: url(./images/landing-char1/left1.png);
-    image-rendering: pixelated;
-    background-size: cover;
-  }
-  75% {
-    background: url(./images/landing-char1/left1.png);
-    image-rendering: pixelated;
-    background-size: cover;
-  }
-  75.01% {
-    background: url(./images/landing-char1/left3.png);
-    image-rendering: pixelated;
-    background-size: cover;
-  }
-  100% {
-    background: url(./images/landing-char1/left3.png);
-    image-rendering: pixelated;
-    background-size: cover;
-  }
 }
 
 @keyframes landing-char2 {
@@ -231,132 +224,62 @@
     background: url(../Game/images/snow-bg.png);
     background-size: cover;
     image-rendering: pixelated;
+    background-repeat: no-repeat;
   }
   33% {
     background: url(../Game/images/snow-bg.png);
     background-size: cover;
     image-rendering: pixelated;
+    background-repeat: no-repeat;
   }
   25% {
     transform: translate(-150px, -600px);
+    image-rendering: pixelated;
   }
   35% {
     background: url(../Game/images/forestpath-bg.png);
     background-size: cover;
     image-rendering: pixelated;
+    background-repeat: no-repeat;
   }
   50% {
     transform: translate(0px, -100px);
+    image-rendering: pixelated;
   }
   64% {
     background: url(../Game/images/forestpath-bg.png);
     background-size: cover;
     image-rendering: pixelated;
+    background-repeat: no-repeat;
   }
   66% {
     background: url(../Game/images/dd-bg.png);
     background-size: cover;
     image-rendering: pixelated;
+    background-repeat: no-repeat;
   }
   75% {
     transform: translate(-150px, -600px);
+    image-rendering: pixelated;
   }
   96% {
     background: url(../Game/images/dd-bg.png);
     background-size: cover;
     image-rendering: pixelated;
+    background-repeat: no-repeat;
   }
   100% {
     background: url(../Game/images/snow-bg.png);
     background-size: cover;
     image-rendering: pixelated;
     transform: translate(-100px, -100px);
-  }
-}
-
-@keyframes bard {
-  0% {
-    background: url(./images/bard/bard-1.png);
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  20% {
-    background: url(./images/bard/bard-1.png);
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  20.01% {
-    background: url(./images/bard/bard-2.png);
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  50% {
-    background: url(./images/bard/bard-2.png);
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  50.01% {
-    background: url(./images/bard/bard-3.png);
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  80% {
-    background: url(./images/bard/bard-3.png);
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  80.01% {
-    background: url(./images/bard/bard-4.png);
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  100% {
-    background: url(./images/bard/bard-4.png);
-    background-size: cover;
-    image-rendering: pixelated;
+    background-repeat: no-repeat;
   }
 }
 
 @keyframes birb-flap {
-  0% {
-    background: url(./images/birdtho/birb1.png);
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  25% {
-    background: url(./images/birdtho/birb1.png);
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  25.01% {
-    background: url(./images/birdtho/birb2.png);
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  50% {
-    background: url(./images/birdtho/birb2.png);
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  50.01% {
-    background: url(./images/birdtho/birb1.png);
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  75% {
-    background: url(./images/birdtho/birb1.png);
-    background-size: cover;
-    image-rendering: pixelated;
-  }
-  75.01% {
-    background: url(./images/birdtho/birb3.png);
-    background-size: cover;
-    image-rendering: pixelated;
-  }
   100% {
-    background: url(./images/birdtho/birb3.png);
-    background-size: cover;
-    image-rendering: pixelated;
+    background-position: -656px;
   }
 }
 
@@ -366,228 +289,6 @@
   }
   100% {
     transform: translateY(-100px);
-  }
-}
-
-@keyframes laughing-landing-char {
-  0% {
-    width: 64px;
-
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/stand.png);
-    background-size: cover;
-  }
-  80% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/stand.png);
-    background-size: cover;
-    width: 64px;
-  }
-  80.01% {
-    width: 70px;
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh1.png);
-    background-size: cover;
-  }
-  81% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh1.png);
-    background-size: cover;
-  }
-  81.01% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh2.png);
-    background-size: cover;
-  }
-  82% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh2.png);
-    background-size: cover;
-  }
-  82.01% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh3.png);
-    background-size: cover;
-  }
-  83% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh3.png);
-    background-size: cover;
-  }
-  83.01% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh1.png);
-    background-size: cover;
-  }
-  84% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh1.png);
-    background-size: cover;
-  }
-  84.01% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh2.png);
-    background-size: cover;
-  }
-  85% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh2.png);
-    background-size: cover;
-  }
-  85.01% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh3.png);
-    background-size: cover;
-  }
-  86% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh3.png);
-    background-size: cover;
-  }
-  86.01% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh1.png);
-    background-size: cover;
-  }
-  87% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh1.png);
-    background-size: cover;
-  }
-  87.01% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh2.png);
-    background-size: cover;
-  }
-  88% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh2.png);
-    background-size: cover;
-  }
-  88.01% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh3.png);
-    background-size: cover;
-  }
-  89% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh3.png);
-    background-size: cover;
-  }
-  89.01% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh1.png);
-    background-size: cover;
-  }
-  90% {
-    width: 70px;
-
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh1.png);
-    background-size: cover;
-  }
-  90.01% {
-    width: 70px;
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh1.png);
-    background-size: cover;
-  }
-  91% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh1.png);
-    background-size: cover;
-  }
-  91.01% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh2.png);
-    background-size: cover;
-  }
-  92% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh2.png);
-    background-size: cover;
-  }
-  92.01% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh3.png);
-    background-size: cover;
-  }
-  93% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh3.png);
-    background-size: cover;
-  }
-  93.01% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh1.png);
-    background-size: cover;
-  }
-  94% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh1.png);
-    background-size: cover;
-  }
-  94.01% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh2.png);
-    background-size: cover;
-  }
-  95% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh2.png);
-    background-size: cover;
-  }
-  95.01% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh3.png);
-    background-size: cover;
-  }
-  96% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh3.png);
-    background-size: cover;
-  }
-  96.01% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh1.png);
-    background-size: cover;
-  }
-  97% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh1.png);
-    background-size: cover;
-  }
-  97.01% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh2.png);
-    background-size: cover;
-  }
-  98% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh2.png);
-    background-size: cover;
-  }
-  98.01% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh3.png);
-    background-size: cover;
-  }
-  99% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh3.png);
-    background-size: cover;
-  }
-  99.01% {
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh1.png);
-    background-size: cover;
-  }
-  100% {
-    width: 70px;
-
-    image-rendering: pixelated;
-    background: url(./images/landing-standing-chars/laugh1.png);
-    background-size: cover;
   }
 }
 
@@ -946,5 +647,72 @@
     background: url(../Game/images/crystal1/cry1.png);
     image-rendering: pixelated;
     background-size: cover;
+  }
+}
+
+@media (max-width: 700px) {
+  .animated-background {
+    animation: none;
+    background: url(../Game/images/forestpath-bg.png);
+    background-size: cover;
+    image-rendering: pixelated;
+    background-repeat: no-repeat;
+    background-size: cover;
+    image-rendering: pixelated;
+  }
+
+  .snow-backer {
+    animation: none;
+    background: none;
+    display: none;
+  }
+
+  .landing-birb {
+    left: 100px;
+    z-index: 80;
+  }
+
+  .crystal1,
+  .crystal2,
+  .crystal3,
+  .crystal4,
+  .crystal5,
+  .crystal6,
+  .crystal7,
+  .crystal8,
+  .crystal9,
+  .crystal10,
+  .crystal11,
+  .crystal12 {
+    display: none;
+    animation: none;
+  }
+
+  .landing-char1 {
+    animation: landing-char1-frames 1s steps(4) infinite,
+      landing-char1-move 25s linear infinite;
+  }
+
+  .landing-char2 {
+    animation: landing-char2-frames 1s steps(4) infinite,
+      landing-char2-move 20s linear infinite;
+  }
+
+  @keyframes landing-char1-move {
+    0% {
+      transform: translateX(800px);
+    }
+    100% {
+      transform: translateX(-100px);
+    }
+  }
+
+  @keyframes landing-char2-move {
+    0% {
+      transform: translateX(-100px);
+    }
+    100% {
+      transform: translateX(800px);
+    }
   }
 }
