--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -7,11 +7,14 @@
 }
 
 .logo {
-  width: 66px;
+  width: 80px;
   height: 120px;
   margin: 2rem 1rem;
-  z-index: 10;
-  animation: bard 1s linear infinite;
+  z-index: 101;
+  background-size: 324px 120px;
+  animation: bard 1s steps(4) infinite;
+  image-rendering: pixelated;
+  position: relative;
 }
 
 .login-signup-container {
@@ -23,7 +26,7 @@
   image-rendering: pixelated;
   position: relative;
   overflow: hidden;
-  z-index: 2;
+  z-index: 100;
 }
 
 .landing-page {
@@ -38,4 +41,21 @@
   z-index: 10;
   display: flex;
   justify-content: center;
+}
+
+@keyframes bard {
+  100% {
+    background-position: -324px;
+  }
+}
+
+@media (max-width: 700px) {
+  .logo {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+  .game-title {
+    margin-top: 1.5rem;
+    margin-bottom: 1rem;
+  }
 }
