Make small MQ adjustments to components

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -35,6 +35,7 @@
   overflow: hidden;
   animation: 80s background-move infinite linear;
   background-size: cover;
+  image-rendering: pixelated;
 }
 
 .student-facing-ui {
