--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -149,3 +149,27 @@
 .forgot-my-password-link:hover {
   cursor: pointer;
 }
+
+@media (max-width: 700px) {
+  .login-email-icon,
+  .login-pw-icon {
+    display: none;
+  }
+
+  .login-form input {
+    padding-left: 0.5rem;
+    padding-top: 7px;
+  }
+
+  .signup-form-switch-button {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    bottom: 4rem;
+    width: 4rem;
+    padding: 4px 0 3px;
+    text-align: center;
+  }
+}
