--- a/src/components/ResetPassword/ResetPassword.css
+++ b/src/components/ResetPassword/ResetPassword.css
@@ -74,3 +74,28 @@
   height: 16px;
   top: 6.95rem;
 }
+
+@media (max-width: 700px) {
+  .password-reset-icon-one,
+  .password-reset-icon-two,
+  .webtoken-icon {
+    display: none;
+  }
+
+  .reset-pw-input {
+    padding-left: 0.5rem;
+    padding-top: 4px;
+  }
+
+  .back-to-login-btn {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    bottom: 0rem;
+    width: 4rem;
+    padding: 4px 0 3px;
+    text-align: center;
+  }
+}
