Remove login animations from mqs

--- a/src/components/ForgotPassword/ForgotPassword.css
+++ b/src/components/ForgotPassword/ForgotPassword.css
@@ -133,6 +133,13 @@
 }
 
 @media (max-width: 700px) {
+  .pw-sent-success,
+  .pw-sent-failure {
+    top: 175px;
+  }
+  .forgot-pw-wrapper.false {
+    display: none;
+  }
   .backup-from-forgot-pw {
     position: absolute;
     margin-left: auto;
@@ -157,7 +164,7 @@
   .forgot-password-form {
     margin: 0.5rem;
   }
-  input.send-new-pw-btn {
+  .send-new-pw-btn {
     height: 25px;
     /* background: #f2f2f2; */
   }
