--- a/src/components/ResetPassword/ResetPassword.css
+++ b/src/components/ResetPassword/ResetPassword.css
@@ -76,6 +76,9 @@
 }
 
 @media (max-width: 700px) {
+  .reset-password-container-frame.false {
+    display: none;
+  }
   .password-reset-icon-one,
   .password-reset-icon-two,
   .webtoken-icon {
