--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -151,6 +151,9 @@
 }
 
 @media (max-width: 700px) {
+  .login-form.false {
+    display: none;
+  }
   .login-email-icon,
   .login-pw-icon {
     display: none;
