Correct height on media queries of CHangePassword comp

--- a/src/components/ChangePassword/ChangePassword.css
+++ b/src/components/ChangePassword/ChangePassword.css
@@ -54,6 +54,8 @@
   .student.change-password-form {
     padding-left: 1rem;
     display: block;
+    height: 500px;
+    z-index: 1000;
   }
 
   .student.change-password-form input {
