--- a/src/components/StudentAccount/StudentAccount.css
+++ b/src/components/StudentAccount/StudentAccount.css
@@ -8,7 +8,7 @@
   image-rendering: pixelated;
   position: relative;
   right: 0;
-  z-index: 20;
+  z-index: 200;
   display: grid;
   grid-template-columns: 200px 1fr;
   grid-template-rows: 50px 1fr;
@@ -116,6 +116,8 @@
     grid-template-columns: 164px 1fr;
     grid-template-rows: 50px 1fr;
     padding-left: 0;
+    margin-top: 0;
+    top: 1rem;
   }
 
   .student-account-label {
