--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -106,6 +106,7 @@
   image-rendering: pixelated;
   background-size: cover;
   background-repeat: no-repeat;
+  width: 33px;
 }
 
 .header-avatar.two {
