--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -111,13 +111,13 @@
 }
 
 .login-warning {
-  font-size: 1rem;
+  font-size: 1.2rem;
   position: absolute;
   margin: auto;
   left: -800px;
   transition: 0.3s;
   right: 0;
-  top: 65px;
+  /* top: 65px; */
 }
 
 .login-warning.true {
