--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -43,6 +43,16 @@
   justify-content: center;
 }
 
+.landing-version-number {
+  position: absolute;
+  right: 2px;
+  bottom: 0px;
+  font-family: "chronotype";
+  color: #f2f2f2;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+  margin: 0;
+}
+
 @keyframes bard {
   100% {
     background-position: -324px;
