--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -49,8 +49,32 @@
   bottom: 0px;
   font-family: "chronotype";
   color: #f2f2f2;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.9);
   margin: 0;
+}
+
+.toggle-dev-message-button {
+  background: url("./images/dev-message-btn.png");
+
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin: 1rem;
+  height: 27px;
+  width: 15px;
+  image-rendering: pixelated;
+  background-size: cover;
+  border: none;
+  z-index: 1000;
+  padding: 0;
+}
+
+.toggle-dev-message-button:focus {
+  outline: none;
+}
+
+.toggle-dev-message-button:hover {
+  cursor: pointer;
 }
 
 @keyframes bard {
