--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -7,12 +7,14 @@
 }
 
 .logo {
-  width: 80px;
+  width: 100px;
   height: 120px;
-  margin: 2rem 1rem;
+  margin: 2.2rem 1rem;
   z-index: 101;
-  background-size: 324px 120px;
-  animation: bard 1s steps(4) infinite;
+  background: url("./images/pb-logo.png");
+  background-size: cover;
+
+  background-repeat: no-repeat;
   image-rendering: pixelated;
   position: relative;
 }
