--- a/src/components/StudentDash/StudentDash.css
+++ b/src/components/StudentDash/StudentDash.css
@@ -826,3 +826,39 @@
     left: 24px;
   }
 }
+
+.leave-class-warning button {
+  height: 25px;
+  font-family: "chronotype";
+  background: #4776bb;
+  border: none;
+  font-size: 1.1rem;
+  box-shadow: 2px 2px 2px#000;
+  transition: 0.3s;
+  padding-top: 4px;
+  margin: 0 1rem;
+}
+
+.leave-class-warning {
+  display: none;
+  position: absolute;
+  z-index: 3000;
+  left: 0;
+  right: 0;
+  top: 200px;
+  margin: auto;
+  height: 150px;
+  width: 300px;
+  background: url("./images/leave-class-warning.png");
+  background-size: cover;
+  image-rendering: pixelated;
+}
+
+.leave-class-warning p {
+  padding: 1.6rem 1.3rem 0;
+  font-size: 1.1rem;
+}
+
+.leave-class-warning.true {
+  display: block;
+}
